objects/Engagement_Type__c.object
<CustomObject>
    <description>This object tracks the skills for all contacts across the org.</description>
    <fields>
        <fullName>ACE_Project_1_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACE Project 1 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACE_Project_2_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACE Project 2 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACE_Project_3_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ACE Project 3 Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_B_Honor_Roll__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A or B honor roll gets tracked on this field.</description>
        <label>A/B Honor Roll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Program Level - Application Completed</description>
        <label>Application Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chapter_Requirements_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Program Level - Chapter Requirements Met</description>
        <label>Chapter Requirements Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coach_Level__c</fullName>
        <description>The level of the coach.</description>
        <label>Coach Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>CEU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accomplishments</relationshipLabel>
        <relationshipName>Engagement_Type</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expected_Graduation_Year__c</fullName>
        <label>Expected Graduation Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
                <value>
                    <fullName>2022</fullName>
                </value>
                <value>
                    <fullName>2023</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2025</fullName>
                </value>
                <value>
                    <fullName>2026</fullName>
                </value>
                <value>
                    <fullName>2027</fullName>
                </value>
                <value>
                    <fullName>2028</fullName>
                </value>
                <value>
                    <fullName>2029</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2031</fullName>
                </value>
                <value>
                    <fullName>2032</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
                <value>
                    <fullName>2034</fullName>
                </value>
                <value>
                    <fullName>2035</fullName>
                </value>
                <value>
                    <fullName>2036</fullName>
                </value>
                <value>
                    <fullName>2037</fullName>
                </value>
                <value>
                    <fullName>2038</fullName>
                </value>
                <value>
                    <fullName>2039</fullName>
                </value>
                <value>
                    <fullName>2040</fullName>
                </value>
                <value>
                    <fullName>2041</fullName>
                </value>
                <value>
                    <fullName>2042</fullName>
                </value>
                <value>
                    <fullName>2043</fullName>
                </value>
                <value>
                    <fullName>2044</fullName>
                </value>
                <value>
                    <fullName>2045</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade_Level__c</fullName>
        <description>If you are adding a new value to this picklist, then add the same on the Grade Level field on Contact too (As per the issue I-254321).</description>
        <inlineHelpText>&apos;Grade promoted on July 31 annually&apos;</inlineHelpText>
        <label>Grade Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>Graduate</fullName>
                </value>
                <value>
                    <fullName>Pre School</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>High School</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Home School</fullName>
                    <isActive>false</isActive>
                </value>
                <value>
                    <fullName>Pre-School</fullName>
                    <isActive>false</isActive>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Office_ACE_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Office ACE Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knowledge_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Program Level - Golf Knowledge Completed</description>
        <label>Knowledge Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Participant_User_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Participant User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Skills_Application_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Program Level - Life Skills Application Completed</description>
        <label>Life Skills Application Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Life_Skills_Knowledge_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Program Level - Life Skills Knowledge Completed</description>
        <label>Life Skills Knowledge Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participant_Level__c</fullName>
        <description>Levels that the participant can be evaluated at/for.</description>
        <label>Participant Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TARGET</fullName>
                </value>
                <value>
                    <fullName>PLAYer</fullName>
                </value>
                <value>
                    <fullName>Par</fullName>
                </value>
                <value>
                    <fullName>Birdie</fullName>
                </value>
                <value>
                    <fullName>Eagle</fullName>
                </value>
                <value>
                    <fullName>Ace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Participation_Hour__c</fullName>
        <description>Program Level - Participation Hours</description>
        <label>Participation Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Participation_Hours__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Program Level - Participation Hours Completed?</description>
        <inlineHelpText>Minimum of 48 hours</inlineHelpText>
        <label>Participation Hours Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reggie_School__c</fullName>
        <label>Reggie School</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Attending__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>School Attending</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Organization</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accomplishments</relationshipLabel>
        <relationshipName>Engagement_Type</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School_Semester__c</fullName>
        <description>School semester</description>
        <label>School Semester</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Spring</fullName>
                </value>
                <value>
                    <fullName>Fall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Year__c</fullName>
        <description>School Year of the Participant</description>
        <label>School Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <label>Skill Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Classes_Attended__c</fullName>
        <label>Total Classes Attended</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Participation_Hours__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Participation Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_of_Completion__c</fullName>
        <description>Year that record references. Example (honor roll spring 2017, this field would hold 2017)</description>
        <label>Year of Completion</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Accomplishment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Grade_Level__c</columns>
        <columns>Reggie_School__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contact_General_Skills</fullName>
        <columns>NAME</columns>
        <columns>Skill_Name__c</columns>
        <columns>Contact__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Engagement_Type__c.Contact_General_Skill</value>
        </filters>
        <label>Contact - General Skills</label>
    </listViews>
    <nameField>
        <displayFormat>ET-{000000}</displayFormat>
        <label>Engagement Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accomplishments</pluralLabel>
    <recordTypes>
        <fullName>Contact_General_Skill</fullName>
        <active>true</active>
        <description>Skills that are tracked that don&apos;t fit into the coaching/participant levels.</description>
        <label>Contact - General Skill</label>
    </recordTypes>
    <recordTypes>
        <fullName>Instructor</fullName>
        <active>true</active>
        <label>Instructor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Instructor_Evaluation</fullName>
        <active>true</active>
        <description>Evaluations for instructors live under this record type</description>
        <label>Instructor - Evaluation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Instructor_Level</fullName>
        <active>true</active>
        <description>For instructors, when they log level 1,2,3, The First Tee Coach documents and their status is assessed its logged under this record type.</description>
        <label>Instructor - Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent</fullName>
        <active>true</active>
        <label>Parent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Participant</fullName>
        <active>true</active>
        <label>Participant</label>
    </recordTypes>
    <recordTypes>
        <fullName>Participant_Level</fullName>
        <active>true</active>
        <description>Each record will cover a different level but from player to eagle the fields are the same</description>
        <label>Participant - Level</label>
    </recordTypes>
    <recordTypes>
        <fullName>Participant_Schooling_Information</fullName>
        <active>true</active>
        <description>Current school, grade level, and honor roll status go here</description>
        <label>Participant - Schooling Information</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Restrict_Program_Level_of_ACE_Certified</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  ISPICKVAL( Program_Level__c , &apos;ACE Certified&apos;) , NOT( Home_Office_ACE_Certified__c = TRUE),$Label.DeactivateValidationRules=&apos;FALSE&apos;)</errorConditionFormula>
        <errorMessage>Program Level of ACE Certified cannot be selected unless &apos;Home Office ACE Certified&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Participant_Level_For_Ace</fullName>
        <active>true</active>
        <description>Validate Participant Level For ACE</description>
        <errorConditionFormula>AND(  
NOT(ISPICKVAL(Participant_Level__c,&apos;Ace&apos;)),
OR(Application_Complete__c = TRUE,
Knowledge_Complete__c = TRUE,
Life_Skills_Application_Complete__c = TRUE ,
Life_Skills_Knowledge_Complete__c = TRUE )
)</errorConditionFormula>
        <errorMessage>Applicaiton ,Knowledge ,Life Skill Application and Life Skill Knowledge are only available for ACE Participant Level</errorMessage>
    </validationRules>
</CustomObject>